# stock_theme_picker

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  server.py  sitecustomize.py
data/: stock_analysis.db-shm  stock_analysis.db.bak-20260504-161200
scripts/: analyze_box_trades.py  analyze_p2_backtest_review.py  backfill_backtest_stock_names.py  build_style_stock_pools.py  import_backtest_json.py  import_backtest_robustness_json.py  migrate_sqlite_to_duckdb.py  rank_box_signals.py  run_backtest.py  run_backtest_batch.py  run_backtest_robustness.py  run_real_capital_backtest.py  run_stock_alerts.py  run_style_pool_backtests.py  sync_daily_bars.py  sync_tushare_history.py
src/: cli.py  config.py  search_service.py  storage.py
src/api/: __init__.py  backtest_endpoints.py  endpoints.py  market_endpoints.py  schemas.py  settings_endpoints.py  stock_query_endpoints.py  watchlist_endpoints.py
src/application/: __init__.py  backtest_execution_service.py  backtest_import_service.py  backtest_portfolio_schedule_service.py  deep_analysis_llm_adapter.py  etf_market_service.py  information_l1_direct_service.py  information_review_service.py  information_watch_loop_service.py  information_watch_service.py  open_discovery_pool_service.py  picker_service.py  settings_service.py  stock_alert_loop_service.py  stock_alert_service.py  stock_deep_analysis_service.py  stock_deep_analysis_task_service.py  stock_query_service.py  stock_query_task_service.py  stock_signal_service.py  stock_text_supplement_service.py  stock_theme_attribution_service.py  task_service.py  theme_factor_scan_service.py
src/backtest/: README.md  __init__.py  data_feed.py  engine.py  metrics.py  models.py  signal_ranking.py
src/core/: __init__.py  theme_alert_pipeline.py
src/data/: stock_analysis.db  theme_board_cache.json  theme_board_mappings.json  theme_registry.example.json  theme_registry.json
src/data_provider/: __init__.py  akshare_fetcher.py  base.py  efinance_fetcher.py  fundamental_adapter.py  tickflow_fetcher.py  tushare_fetcher.py  yfinance_fetcher.py
src/domain/: theme_event.py
src/infrastructure/: __init__.py  board_http_provider.py  board_resolver_service.py  daily_bar_service.py  etf_http_provider.py  etf_query_logging.py  event_scanner.py  expansion_service.py  market_http_provider.py  persistence.py  runtime.py  search_fallback_logging.py  signal_service.py  stock_pool_service.py  stock_query_logging.py
tests/: test_a_share_box_strategy_golden.py  test_a_share_box_strategy_macd.py  test_backtest_engine_costs.py  test_backtest_engine_execution.py  test_backtest_metrics.py  test_backtest_portfolio_schedule_service.py  test_backtest_portfolio_schedule_storage.py  test_backtest_robustness.py  test_real_capital_backtest.py  test_run_backtest_batch.py  test_signal_ranking.py  test_storage_duckdb_recompute.py  test_strategy_imports.py  test_strategy_params.py
theme_picker_standalone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+75 files in other folders)
